--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "axios": "^1.3.4",
     "lorem-ipsum": "^2.0.8",
+    "metascraper": "^5.34.7",
+    "metascraper-image": "^5.34.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "url-metadata": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
