--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "metascraper": "^5.34.7",
     "metascraper-image": "^5.34.7",
     "react": "^18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.8.2",
