--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-string-replace": "^1.1.0",
